Refactor RestAPI methods add total and fix bug
