# products_go/internal/routes/route.go
@@ -1,7 +1,7 @@
 package routes
 
 import (
-	"MarketPlaceBackEnd/internal/models"
+	"products_go/internal/models"
 
 	"github.com/gofiber/fiber/v2"
 	"github.com/sirupsen/logrus"
@@ -9,8 +9,8 @@ import (
 
 func RespStatus(apiVersion string, statusCode int, description string) fiber.Map {
 	return fiber.Map{
-		"apiVersion":  apiVersion,
-		"statusCode":  statusCode,
+		"api_version": apiVersion,
+		"status_code": statusCode,
 		"description": description,
 	}
 }
@@ -20,21 +20,21 @@ func Home(c *fiber.Ctx) error {
 }
 
 func GetAll(c *fiber.Ctx) error {
-	resp, err := models.GetAllProducts()
-	if err != nil {
-		logrus.Warn(err)
+	requ, err := models.ReadCSV(c.Query("total")) // Test
+	if requ == nil || err != nil {
+		logrus.Warnf("The user transmitted a query value that is not in the valid range (0 or >= 10000) - [%v] [%s]\n", requ, err)
 		return c.Status(fiber.ErrBadRequest.Code).JSON(RespStatus("1.0", fiber.ErrBadRequest.Code, "Incorrect data"))
 	}
 
-	return c.Status(fiber.StatusOK).Send(resp)
+	return c.Status(fiber.StatusOK).Send(requ)
 }
 
 func GetById(c *fiber.Ctx) error {
-	resp, err := models.GetByIdProduct(c.Params("productId"))
-	if err != nil || resp == nil {
-		logrus.Warn(err)
+	requ, err := models.GetByIdProduct(c.Params("productId"))
+	if requ == nil || err != nil {
+		logrus.Warnf("The user transmitted a query value that is not in the valid range (0 or >= 10000) - [%v] [%s]\n", requ, err)
 		return c.Status(fiber.ErrBadRequest.Code).JSON(RespStatus("1.0", fiber.ErrBadRequest.Code, "Incorrect data"))
 	}
 
-	return c.Status(fiber.StatusOK).Send(resp)
+	return c.Status(fiber.StatusOK).Send(requ)
 }
